Fix overflow-x issue on desktop

--- a/css/root.css
+++ b/css/root.css
@@ -45,7 +45,6 @@
     font-size: 100%;
     font-family: 'Roboto', Arial, sans-serif;
     color: var(--bodyText);
-    overflow: auto !important;
     -moz-text-size-adjust: none;
     -webkit-text-size-adjust: none;
             text-size-adjust: none;
